src/objects/loan__Custom_Job_Query__c.object
<CustomObject>
    <fields>
        <fullName>loan__ACH_Job_Query__c</fullName>
        <label>ACH Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Job_Query__c</fullName>
        <label>Accrual Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Amortization_Job_Query__c</fullName>
        <label>Amortization Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Billing_Job_Query__c</fullName>
        <label>Billing Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Delinquency_Job_Query__c</fullName>
        <label>Delinquency Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__EOD_Job_Query__c</fullName>
        <label>EOD Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__GL_Balance_Update_Job_Query__c</fullName>
        <label>GL Balance Update Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Maturity_Job_Query__c</fullName>
        <label>Maturity Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__SOD_Accounting_Job_Query__c</fullName>
        <label>SOD Accounting Job Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Custom Job Query</label>
    <nameField>
        <label>Custom Job Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Job Query</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>